# cool-geo-app-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  mydb.dump  pyproject.toml
app/: main.py
app/authorization/: __init__.py
app/database/: adapter.py  database.py  dynamic_query_builder.py  query_loader.py  template_loader.py
app/database/queries/: get_ages.sql  get_genders.sql  get_months.sql  get_paystats_by_postal_code.sql  get_postal_code.sql  get_postal_codes.sql  paystat_aggregation.sql
app/database/templates/: select_aggregation_from_paystats.jinja  select_distinct_from_paystats.jinja  select_postal_codes.jinja  select_postal_codes_union.jinja
app/router/: payments.py  postal_codes.py
app/service/: payments.py  paystat.py  postal_code.py  postal_codes.py
app/service/models/: __init__.py
db/: init_db.sql
db/data/: paystats.csv
docs/: 20190704_be_PS_test.md
images/: diagram.drawio
tests/: test_main.py
tests/payments/: test_payments.py
tests/postal_codes/: test_postal_codes.py
